1.0.4 (?/??/2018):
------------------

- Change to Makefile.mac to use standard libncurses rather than a 3rd-party
  version; should help with cgdisk compatibility.

- Minor bug fix in alignment of internal data structures.

- Minor bug fix in handling of damaged disks.

- Added type code for Apple APFS (7C3457EF-0000-11AA-AA11-00306543ECAC,
  0xaf0a).

- Added 52 (yes, 52!) Android partition type codes.

- Changed "Creating new GPT entries" message to read "Creating new
  GPT entries in memory" because the latter is clearer, particularly when
  using sgdisk with a non-destructive option, like "-p".

1.0.3 (7/27/2017):
------------------

- Fixed a major bug that caused invalid partition tables to be generated
  when creating a new partition table (that is, partitioning a blank disk or
  converting from MBR).

1.0.2 (7/26/2017):
------------------

- On Linux, the p/-p/--print command now shows the disk's model name, as
  reported in /sys/block/sda/device/model (or equivalent filenames for other
  disks). This feature does not yet work on other platforms, on which the
  model name line is omitted from the output. This line is also not shown
  when accessing disk image files, even on Linux.

- GPT fdisk can now report both the physical and logical sector sizes of
  disks, but only on 2.6.32 and later Linux kernels. The verify feature now
  uses the larger of the set alignment and physical/logical block sizes for
  testing alignment, and setting alignment to something other than an exact
  multiple of the ratio of the physical to logical block size results in a
  warning.

- Addition of new verification checks, mostly (but not exclusively) related
  to the new j/-j/--move-main-table option.

- Added new option: 'j' on the experts' menu in gdisk;
  '-j/--move-main-table={sector}' in sgdisk. This option enables relocating
  the main partition table from sector 2 (the default location) to somewhere