@@ -1,6 +1,6 @@
-.\" Copyright 2011-2017 Roderick W. Smith (rodsmith@rodsbooks.com)
+.\" Copyright 2011-2018 Roderick W. Smith (rodsmith@rodsbooks.com)
 .\" May be distributed under the GNU General Public License
-.TH "FIXPARTS" "8" "1.0.3" "Roderick W. Smith" "FixParts Manual"
+.TH "FIXPARTS" "8" "1.0.4" "Roderick W. Smith" "FixParts Manual"
 .SH "NAME"
 fixparts \- MBR partition table repair utility
 .SH "SYNOPSIS"
