@@ -1,6 +1,6 @@
-.\" Copyright 2011-2017 Roderick W. Smith (rodsmith@rodsbooks.com)
+.\" Copyright 2011-2018 Roderick W. Smith (rodsmith@rodsbooks.com)
 .\" May be distributed under the GNU General Public License
-.TH "GDISK" "8" "1.0.3" "Roderick W. Smith" "GPT fdisk Manual"
+.TH "GDISK" "8" "1.0.4" "Roderick W. Smith" "GPT fdisk Manual"
 .SH "NAME"
 gdisk \- Interactive GUID partition table (GPT) manipulator
 .SH "SYNOPSIS"
@@ -185,12 +185,15 @@ related to their equivalent MBR codes. Specifically, the MBR code is
 multiplied by hexadecimal 0x0100. For instance, the code for Linux swap
 space in MBR is 0x82, and it's 0x8200 in \fBgdisk\fR. A one\-to\-one
 correspondence is impossible, though. Most notably, the codes for all
-varieties of FAT and NTFS partition correspond to a single GPT code
-(entered as 0x0700 in \fBsgdisk\fR). Some OSes use a single MBR code but
-employ many more codes in GPT. For these, \fBgdisk\fR adds code numbers
-sequentially, such as 0xa500 for a FreeBSD disklabel, 0xa501 for FreeBSD
-boot, 0xa502 for FreeBSD swap, and so on. Note that these two\-byte codes
-are unique to \fBgdisk\fR.
+varieties of FAT and NTFS partition correspond to a single GPT code (entered
+as 0x0700 in \fBgdisk\fR). Some OSes use a single MBR code but employ many
+more codes in GPT. For these, \fBgdisk\fR adds code numbers sequentially,
+such as 0xa500 for a FreeBSD disklabel, 0xa501 for FreeBSD boot, 0xa502 for
+FreeBSD swap, and so on. Note that these two\-byte codes are unique to
+\fBgdisk\fR. The type code list may optionally be filtered by a search
+string; for instance, entering \fI\fBLinux\fR\fR shows only partition type
+codes with descriptions that include the string \fILinux\fR. This search is
+performed case\-sensitively.
 
 .TP 
 .B n
