@@ -1,6 +1,6 @@
-.\" Copyright 2011-2017 Roderick W. Smith (rodsmith@rodsbooks.com)
+.\" Copyright 2011-2018 Roderick W. Smith (rodsmith@rodsbooks.com)
 .\" May be distributed under the GNU General Public License
-.TH "SGDISK" "8" "1.0.3" "Roderick W. Smith" "GPT fdisk Manual"
+.TH "SGDISK" "8" "1.0.4" "Roderick W. Smith" "GPT fdisk Manual"
 .SH "NAME"
 sgdisk \- Command\-line GUID partition table (GPT) manipulator for Linux and Unix
 .SH "SYNOPSIS"
